unpackaged/main/default/objects/Landlord_Verifcation__c/Landlord_Verifcation__c.object-meta.xml
<CustomObject>
    <label>Landlord Verifcation</label>
    <nameField>
        <displayFormat>LLV-{000000}</displayFormat>
        <label>Landlord Verifcation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Landlord Verifcations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>