unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Answer_4__c.field-meta.xml
<CustomField>
    <fullName>Answer_4__c</fullName>
    <description>Answer to: What is their monthly rent?</description>
    <inlineHelpText>Answer to: What is their monthly rent? Enter a dollar amount.</inlineHelpText>
    <label>Answer 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>