unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Answer_5__c.field-meta.xml
<CustomField>
    <fullName>Answer_5__c</fullName>
    <description>Answer to: Are they current on their lease obligation to you?</description>
    <inlineHelpText>Answer to: Are they current on their lease obligation to you? - Select Yes or No</inlineHelpText>
    <label>Answer 5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>