unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Business_Day_Next__c.field-meta.xml
<CustomField>
    <fullName>Business_Day_Next__c</fullName>
    <formula>CASE( MOD(DATEVALUE(LLV_Start_Date__c) - DATE( 1900, 1, 7 ), 7 ), 
0, DATEVALUE(LLV_Start_Date__c) + 0 + 1, /* Sun:Date+0 wknd day+1 day */ 
5, DATEVALUE(LLV_Start_Date__c) + 2 + 1, /* Fri:Date+2 wknd days+1 day */ 
6, DATEVALUE(LLV_Start_Date__c) + 1 + 1, /* Sat:Date+1 wknd days+1 day */ 
DATEVALUE(LLV_Start_Date__c) + 1 /* Default (Mon/Tue/Wed):Date+1day */ 
)</formula>
    <label>Business Day (Next)</label>
    <type>Date</type>
</CustomField>