unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Address__c</fullName>
    <formula>Physical_Address__c &amp; ", " &amp; City__c &amp; ", " &amp; State__c &amp; " " &amp; Zip__c</formula>
    <label>Complete Address</label>
    <type>Text</type>
</CustomField>