unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Facility_Company_w_Contact__c.field-meta.xml
<CustomField>
    <fullName>Facility_Company_w_Contact__c</fullName>
    <formula>IF(Facility_Company__c = "", Facility_Contact__c, IF(Facility_Contact__c = "",  Facility_Company__c,  Facility_Company__c &amp; "/" &amp; Facility_Contact__c))</formula>
    <label>Facility Company w/ Contact</label>
    <type>Text</type>
</CustomField>