unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Funder_Email__c.field-meta.xml
<CustomField>
    <fullName>Funder_Email__c</fullName>
    <formula>Opportunity__r.Funder__r.Email</formula>
    <label>Funder Email</label>
    <type>Text</type>
</CustomField>