unpackaged/main/default/objects/Landlord_Verifcation__c/fields/LLV_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>LLV_Complete_Date__c</fullName>
    <label>LLV Complete Date</label>
    <type>DateTime</type>
</CustomField>