unpackaged/main/default/objects/Landlord_Verifcation__c/fields/LLV_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LLV_Start_Date__c</fullName>
    <label>LLV Start Date</label>
    <type>DateTime</type>
</CustomField>