unpackaged/main/default/objects/Landlord_Verifcation__c/fields/LLV_Started_By__c.field-meta.xml
<CustomField>
    <fullName>LLV_Started_By__c</fullName>
    <label>LLV Started By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>