unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <defaultValue>"Do you have an active lease with the borrower?"</defaultValue>
    <label>Question 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>