unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Question_4__c.field-meta.xml
<CustomField>
    <fullName>Question_4__c</fullName>
    <defaultValue>"What is their monthly rent?"</defaultValue>
    <label>Question 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>