unpackaged/main/default/objects/Landlord_Verifcation__c/fields/Question_5__c.field-meta.xml
<CustomField>
    <fullName>Question_5__c</fullName>
    <defaultValue>"Are they current on their lease obligation to you?"</defaultValue>
    <label>Question 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>